--- a/style.css
+++ b/style.css
@@ -14,7 +14,10 @@ body{
     background: #95e0f3;
     height: 65%;
     width: 100%;
-    
+    overflow: auto;        /* scroll if needed */
+  padding: 1rem;
+  box-sizing: border-box;
+  border: 1px solid #ccc;
 }
 .cls2{
     background: #f6e4d0;
@@ -32,8 +35,14 @@ body{
 }
 
 .form{
-    
-    max-width: 80%;
+    width: 100%;
+  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem; /* space between inputs */
 }
 input, select, textarea {
     width: 100%;
