--- a/style.css
+++ b/style.css
@@ -1,29 +1,37 @@
 body{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+    background: #f0f0f0;
+    font-family: Arial, sans-serif;
+    margin: 0%;
+    height: 92vh;
+    width: 100vw;
 }
 .main{
+    height: 90%;
+    width: 60%;
     display: grid;
+    margin: auto auto;
+    margin-top: 5%;
+    border-radius: 10px;
+    padding: 10px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1.5fr auto;
-    margin: 5% 20%;
+    grid-template-rows: 1.5fr 0.5fr;
     
 }
 .cls1{
     background: #95e0f3;
-    height: 65%;
-    width: 100%;
-    overflow: auto;        /* scroll if needed */
-  padding: 1rem;
-  box-sizing: border-box;
-  border: 1px solid #ccc;
+    height: 100%;
+    width: 90%;
+    grid-column: 1;
+    grid-row: 1;
+    padding: 0px 5%;
 }
 .cls2{
     background: #f6e4d0;
     height: 100%;
     width: 100%;
-    grid-row: 1 / span 2;
+    grid-row-start: 1 ;
+    grid-row-end: 3;
     grid-column: 2;
 }
 .cls3{
@@ -31,36 +39,80 @@ body{
     height: 100%;
     width: 100%;
     grid-column: 1;
-    
+    grid-row: 2;
+}
+.cls1 h4 {
+  text-align: center;
+  margin-bottom: 5px;
 }
 
-.form{
-    width: 100%;
-  height: 100%;
-  max-width: 100%;
-  max-height: 100%;
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem; /* space between inputs */
+.form-group {
+  margin-bottom: 10px;
 }
+
+label {
+  display: block;
+  font-weight: bold;
+  font-size: 10px;
+  margin-bottom: 5px;
+}
+
 input, select, textarea {
-    width: 100%;
-    padding: 8px;
-    margin: 5px 0;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  
-  button {
-    background-color: #007BFF;
-    color: white;
-    padding: 10px;
-    border: none;
-    cursor: pointer;
-  }
-  
-  button:hover {
-    background-color: #0056b3;
-  }
+  width: 100%;
+  box-sizing: border-box;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+}
+
+textarea {
+  resize: vertical;
+}
+form input,
+form select,
+form textarea,
+form button {
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.form-group .error {
+  color: red;
+  font-size: 0.35em;
+  margin-top: 2px;
+}
+
+.radio-group {
+  display: flex;
+  gap: 10px;
+}
+
+.form-group.success input,
+.form-group.success select,
+.form-group.success textarea {
+  border: 2px solid green;
+}
+
+.form-group.error input,
+.form-group.error select,
+.form-group.error textarea {
+  border: 2px solid red;
+}
+
+button {
+  width: 100%;
+  padding: 5px;
+  background-color: #007bff;
+  color: white;
+  font-size: 10px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #0056b3;
+}
+form {
+  overflow: hidden;
+}
   
