--- a/style.css
+++ b/style.css
@@ -158,16 +158,15 @@ button:hover {
 .cls2 {
   background: #fff;
   grid-column: 2;
-  grid-row-start: 1;
-  grid-row-end: 3;
+  grid-row: 1 / span 2;
+  height: 100%; 
+  
 }
 
 .ranking-card {
   /* padding: 1rem; */
   max-width: 1200px;
-  max-height: 90vh;
-  /* overflow-y: auto; */
-  margin: 2rem auto;
+  height: 100%;
   padding: 2rem;
   background: #fff;
   border-radius: 12px;
